src/parse/snapshots/script_lang__parse__test__r#while__empty.snap
---
source: src/parse/test.rs
assertion_line: 193
expression: ast

---
While(
    WhileStmt {
        span: Span {
            start: 0,
            end: 0,
        },
        cond: Literal(
            Boolean(
                true,
                Span {
                    start: 0,
                    end: 0,
                },
            ),
        ),
        body: Block {
            stmts: [],
            span: Span {
                start: 0,
                end: 0,
            },
        },
    },
)
