src/parse/snapshots/script_lang__parse__test__r#while__or_condition_break.snap
---
source: src/parse/test.rs
assertion_line: 202
expression: ast

---
While(
    WhileStmt {
        span: Span {
            start: 0,
            end: 0,
        },
        cond: BinaryOp(
            BinaryOp {
                span: Span {
                    start: 0,
                    end: 0,
                },
                lhs: Literal(
                    Boolean(
                        false,
                        Span {
                            start: 0,
                            end: 0,
                        },
                    ),
                ),
                rhs: Literal(
                    Boolean(
                        true,
                        Span {
                            start: 0,
                            end: 0,
                        },
                    ),
                ),
                kind: Or,
            },
        ),
        body: Block {
            stmts: [
                Break(
                    Span {
                        start: 0,
                        end: 0,
                    },
                ),
            ],
            span: Span {
                start: 0,
                end: 0,
            },
        },
    },
)
